fix: toggle mobile image visibility and add hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,14 @@ header {
   color: #fff;
   border: 1px solid #ff8a1d;
 }
-.slider-right, .section3-left{
+.slider-right{
   margin-top: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
 }
-.slider-right img,.section3-left img{
+.slider-right img{
   width: auto;
   height: auto;
   max-width: 100%;
@@ -106,6 +106,11 @@ header {
   border: none;
   gap: 15px;
 }
+.about-card:hover,
+.services-card:hover{ 
+  background: #ff8a1d;
+  transition: .3s ease;
+  color: white;}
 .about-card i {
   font-size: 30px;
   margin: 0;
@@ -157,6 +162,7 @@ header {
 #section{background-color: #d1e3ff;}
 #section2{background: #f9f9f9;}
 #section3{background: #d1e3ff;}
+.section3-left img{display: none;}
 #section4, #section5{padding: 90px 0;}
 #section4 h2, footer h2{
   display: flex;
@@ -217,7 +223,10 @@ textarea{
   color: #000;
 }
 .frm-btn{
-  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 50px;
   border: none;
   outline: none;
@@ -225,6 +234,7 @@ textarea{
   color: #fff;
   font: normal 1em "Merriweather Sans",sans-serif;
   text-transform: uppercase;
+  padding-left: 0;
 }
 .frm-btn:hover{
   background: transparent;
@@ -350,6 +360,20 @@ h4{
   .slider, .section3, .contact-us{
     flex-direction: row;
   }
+  .section3-left{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .section3-left img{
+    display: flex;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    object-fit: cover;
+  }
   .slider-left, .slider-right, .section3-left,.section3-right, .contact-left, .contact-right {width: 50%;}
   .slider-left a, .section3-right a{width: 30%;margin: 10px 0;}
   .slider-right img, .section3-left img{max-width: 500px;}
@@ -357,7 +381,6 @@ h4{
   .about-card, .services-card{flex-direction: column; text-align: center; width: 31%;}
   .about-card i{font-size: 3.5em;}
   .about-card p, .services-card h5{font-size: 1.4em;}
-  .about-card:hover, .services-card:hover{ background: #ff8a1d; transition: .3s ease;color: white;}
   .services-card:hover{transform: scale(1.05); transition: .3s ease}
   .about-us-content{
     width: 100%;
@@ -370,6 +393,7 @@ h4{
   .about-us-right img{width: 98%;border-radius: 10px;margin: 20px 0;}
   .contact-us{align-items: flex-start; gap: 40px;}
   input, textarea{background: rgba(245, 245, 245);}
+  .frm-btn{width: 30%;}
   .footer-top{
    width: 100%;
    display: flex;
